add cloud provider